完成项目重命名 - 客户端和服务端编译测试通过

--- a/Sources/Server/package.json
+++ b/Sources/Server/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "ShowMeTheMoney",
-    "version": "1.8.0",
-    "author": "SwiftXP",
+    "name": "QuickPrice",
+    "version": "1.0.0",
+    "author": "QuickPrice Team",
     "license": "MIT",
-    "sptVersion": "~3.11",
+    "sptVersion": "~4.0.0",
     "loadBefore": [],
     "loadAfter": [],
     "incompatibilities": [],
