--- a/Sources/Server/QuickPrice.Server.csproj
+++ b/Sources/Server/QuickPrice.Server.csproj
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
-        <RootNamespace>SwiftXP.SPT.ShowMeTheMoney.Server</RootNamespace>
+        <RootNamespace>QuickPrice.Server</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
-        <Version>2.0.0</Version>
-        <AssemblyName>swiftxp-showmethemoney</AssemblyName>
-        <Title>Show Me The Money Server Mod</Title>
-        <Authors>SwiftXP</Authors>
+        <Version>1.0.0</Version>
+        <AssemblyName>quickprice</AssemblyName>
+        <Title>QuickPrice Server Module</Title>
+        <Authors>QuickPrice Team</Authors>
         <!-- 输出路径设置 -->
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
