feat(地面物品着色): 新增战局内地面物品名称着色功能
- 实现地面物品名称自动着色，与背包颜色系统一致
- 支持子弹按穿甲等级、护甲按防弹等级、普通物品按价格着色
- 添加三级缓存机制优化性能
- 新增跳蚤市场禁售物品检测功能
- 优化商人价格服务容器处理逻辑

--- a/Sources/Client/QuickPrice.csproj
+++ b/Sources/Client/QuickPrice.csproj
@@ -44,6 +44,9 @@
     <Reference Include="UnityEngine.InputLegacyModule">
       <HintPath>$(TarkovManagedDir)UnityEngine.InputLegacyModule.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>$(TarkovManagedDir)Unity.TextMeshPro.dll</HintPath>
+    </Reference>
 
     <!-- BepInEx DLLs -->
     <Reference Include="0Harmony">
