feat(Server): 添加自动刷新定时器和配置管理功能
- 新增QuickPriceConfig配置类用于管理服务端配置
- 实现自动刷新定时器功能，根据配置间隔更新价格缓存
- 添加服务器启动时的预加载机制，优化首次请求响应速度
- 更新默认价格和穿透阈值配置
- 修改作者信息为"xiaoluo"
- 版本号升级至1.2.0

--- a/Sources/Server/QuickPrice.Server.csproj
+++ b/Sources/Server/QuickPrice.Server.csproj
@@ -6,10 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
-        <Version>1.1.1</Version>
+        <Version>1.2.0</Version>
         <AssemblyName>quickprice</AssemblyName>
         <Title>QuickPrice Server Module</Title>
-        <Authors>QuickPrice Team</Authors>
+        <Authors>xiaoluo</Authors>
         <!-- 输出路径设置 -->
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
